// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Meeting Controls snapshot matches snapshot 1`] = `
<div
  className="wxc-meeting-controls"
>
  <div
    id="test"
  />
</div>
`;

exports[`Webex Meeting Controls snapshot matches snapshot with custom CSS class 1`] = `
<div
  className="wxc-meeting-controls my-custom-css-class"
>
  <div
    id="test"
  />
</div>
`;
